// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertMessage component does not render if show is false 1`] = `null`;

exports[`AlertMessage component renders correctly if backgroundColor prop is set 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#CCCCCC",
            "fontFamily": "Avenir-Book",
            "fontSize": 17,
            "fontWeight": "bold",
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      howdy
    </Text>
  </View>
</View>
`;

exports[`AlertMessage component renders correctly if show is true 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#CCCCCC",
            "fontFamily": "Avenir-Book",
            "fontSize": 17,
            "fontWeight": "bold",
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      howdy
    </Text>
  </View>
</View>
`;
